<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_centerHorizontal="true"
    android:background="@color/background_floating_material_dark"
    >

    <TextView
        android:id="@+id/head"
        android:text="@string/hello_world"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/abc_primary_text_disable_only_material_dark"/>

    <TextView
        android:id="@+id/quesText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/question"
        android:textSize="25sp"
        android:textColor="@color/abc_primary_text_disable_only_material_dark"
        android:gravity="center"/>

    <RadioGroup
        android:id="@+id/rgroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    <RadioButton
        android:id="@+id/op1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/option1"
        android:textSize="20sp"
        android:button="@null"
        android:background="@color/background_material_light"
        android:layout_marginTop="2sp"
        android:gravity="center"/>

    <RadioButton
        android:id="@+id/op2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/option2"
        android:textSize="20sp"
        android:button="@null"

        android:background="@color/background_material_light"
        android:layout_marginTop="2sp"
        android:gravity="center"/>

    <RadioButton
        android:id="@+id/op3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/option3"
        android:textSize="20sp"
        android:button="@null"

        android:background="@color/background_material_light"
        android:layout_marginTop="2sp"
        android:gravity="center"/>

    <RadioButton
        android:id="@+id/op4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/option4"
        android:textSize="20sp"
        android:button="@null"
        android:background="@color/background_material_light"
        android:layout_marginTop="2sp"
        android:gravity="center"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">
        <com.abhyaas.app.testprep.NavigateButton
            android:id="@+id/previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"/>
        <com.abhyaas.app.testprep.NavigateButton
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"/>
        <Button
            android:id="@+id/finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="finish"
            android:textAllCaps="true"/>
    </LinearLayout>
    <TextView
        android:id="@+id/debug"
        android:layout_width="match_parent"
        android:layout_height="fill_parent" />
</LinearLayout>
